# tiny2terra

./: Cargo.toml  README.md  baddata  testdata
src/: cli.yml  lib.rs  main.rs  route53.rs  route53_parser.rs  tinydns.rs  types.rs
