[package]
name = "tiny2terra"
version = "0.5.1"
authors = ["Daniel Fox <daniel.fox@nike.com>"]
description = "Convert TinyDNS/DJBDNS zone files into Route53 Terraform format"
publish = false
license = "Nike"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = {version = "~2.32.0", features = ["yaml"]}

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tiny2terra = { path = "/usr/bin/tiny2terra" }
